--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# ASP.NET Core (.NET Framework)
-# Build and test ASP.NET Core projects targeting the full .NET Framework.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
 - main
 
@@ -10,38 +5,103 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  solution: '*/.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  frontPath: './EmployeeCrudAngular'
 
-steps:
-- task: NuGetToolInstaller@1
+stages:
+- stage: BuildAndTest
+  displayName: "Build and Test API and Front"
+  jobs:
+  - job: BuildDotnet
+    displayName: "Build and Test API"
+    pool:
+      vmImage: 'windows-latest'
+    steps:
+    - checkout: self
+      fetchDepth: 0
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+    - task: DotNetCoreCLI@2
+      displayName: 'Restaurar paquetes NuGet'
+      inputs:
+        command: restore
+        projects: '$(solution)'
 
-- task: DotNetCoreCLI@2
-  displayName: 'Ejecutar pruebas de la API'
-  inputs:
-     command: 'test'
-     projects: '**/*.Tests.csproj'  # Asegúrate de que el patrón apunte a tu proyecto de pruebas
-     arguments: '--collect:"XPlat Code Coverage"'
+    - task: DotNetCoreCLI@2
+      displayName: 'Ejecutar pruebas de la API'
+      inputs:
+        command: 'test'
+        projects: '*/.Tests.csproj'
+        arguments: '--collect:"XPlat Code Coverage"'
 
-- task: PublishCodeCoverageResults@2
-  inputs:
-     summaryFileLocation: '$(Agent.TempDirectory)/**/*.cobertura.xml'
-     failIfCoverageEmpty: false
-  displayName: 'Publicar resultados de code coverage del back-end'
+    - task: PublishCodeCoverageResults@2
+      displayName: 'Publicar resultados de code coverage del back-end'
+      inputs:
+        summaryFileLocation: '$(Agent.TempDirectory)/*/.cobertura.xml'
+        failIfCoverageEmpty: false
+      
+    - task: DotNetCoreCLI@2
+      displayName: 'Compilar la API'
+      inputs:
+        command: build
+        projects: '$(solution)'
+        arguments: '--configuration $(buildConfiguration)'
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    - task: DotNetCoreCLI@2
+      displayName: 'Publicar aplicación'
+      inputs:
+        command: publish
+        publishWebProjects: True
+        arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+        zipAfterPublish: true
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publicar artefactos de compilación'
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'api-drop'
+        publishLocation: 'Container'
+
+  - job: BuildAngular
+    displayName: "Build and Test Angular"
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: NodeTool@0
+      displayName: 'Instalar Node.js'
+      inputs:
+        versionSpec: '22.x'
+    
+    - script: npm install
+      displayName: 'Instalar dependencias'
+      workingDirectory: $(frontPath)
+
+    - script: npx ng test --karma-config=karma.conf.js --watch=false --browsers ChromeHeadless --code-coverage
+      displayName: 'Ejecutar pruebas del front'
+      workingDirectory: $(frontPath)
+      continueOnError: true  # Continue on test failure
+
+    - task: PublishCodeCoverageResults@2
+      displayName: 'Publicar resultados de code coverage del front'
+      inputs:
+        summaryFileLocation: '$(frontPath)/coverage/lcov.info'
+        failIfCoverageEmpty: false
+      condition: always()
+    - task: PublishTestResults@2
+      displayName: 'Publicar resultados de pruebas unitarias del front'
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: '$(frontPath)/test-results/test-results.xml'
+        failTaskOnFailedTests: true
+      condition: always()
+
+    - script: npm run build
+      displayName: 'Compilar el proyecto Angular'
+      workingDirectory: $(frontPath)
+
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publicar artefactos Angular'
+      inputs:
+        PathtoPublish: '$(frontPath)/dist'
+        ArtifactName: 'front-drop'
