--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '*/.sln'
+  solution: '**/*.sln' # Cambié la ruta del archivo de solución para que coincida con cualquier .sln
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   frontPath: './EmployeeCrudAngular'
@@ -22,25 +22,37 @@ stages:
     - checkout: self
       fetchDepth: 0
 
+    # Instalar .NET 6 (o la versión que necesites)
+    - task: UseDotNet@2
+      displayName: 'Instalar .NET 6 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '6.x.x' # Cambia si usas otra versión
+        installationPath: $(Agent.ToolsDirectory)/dotnet
+
+    # Restaurar paquetes NuGet
     - task: DotNetCoreCLI@2
       displayName: 'Restaurar paquetes NuGet'
       inputs:
         command: restore
         projects: '$(solution)'
 
+    # Ejecutar pruebas de la API
     - task: DotNetCoreCLI@2
       displayName: 'Ejecutar pruebas de la API'
       inputs:
         command: 'test'
-        projects: '*/.Tests.csproj'
+        projects: '**/*.Tests.csproj' # Se ajustó el patrón de búsqueda
         arguments: '--collect:"XPlat Code Coverage"'
 
+    # Publicar resultados de code coverage del back-end
     - task: PublishCodeCoverageResults@2
       displayName: 'Publicar resultados de code coverage del back-end'
       inputs:
-        summaryFileLocation: '$(Agent.TempDirectory)/*/.cobertura.xml'
+        summaryFileLocation: '$(Agent.TempDirectory)/**/*.cobertura.xml' # Ajuste de ruta
         failIfCoverageEmpty: false
-      
+
+    # Compilar la API
     - task: DotNetCoreCLI@2
       displayName: 'Compilar la API'
       inputs:
@@ -48,6 +60,7 @@ stages:
         projects: '$(solution)'
         arguments: '--configuration $(buildConfiguration)'
 
+    # Publicar aplicación .NET
     - task: DotNetCoreCLI@2
       displayName: 'Publicar aplicación'
       inputs:
@@ -56,6 +69,7 @@ stages:
         arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
         zipAfterPublish: true
 
+    # Publicar artefactos de compilación
     - task: PublishBuildArtifacts@1
       displayName: 'Publicar artefactos de compilación'
       inputs:
@@ -68,26 +82,32 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
+    # Instalar Node.js
     - task: NodeTool@0
       displayName: 'Instalar Node.js'
       inputs:
         versionSpec: '22.x'
     
+    # Instalar dependencias
     - script: npm install
       displayName: 'Instalar dependencias'
       workingDirectory: $(frontPath)
 
+    # Ejecutar pruebas del front con cobertura
     - script: npx ng test --karma-config=karma.conf.js --watch=false --browsers ChromeHeadless --code-coverage
       displayName: 'Ejecutar pruebas del front'
       workingDirectory: $(frontPath)
-      continueOnError: true  # Continue on test failure
+      continueOnError: true
 
+    # Publicar resultados de code coverage del front
     - task: PublishCodeCoverageResults@2
       displayName: 'Publicar resultados de code coverage del front'
       inputs:
         summaryFileLocation: '$(frontPath)/coverage/lcov.info'
         failIfCoverageEmpty: false
       condition: always()
+
+    # Publicar resultados de pruebas unitarias del front
     - task: PublishTestResults@2
       displayName: 'Publicar resultados de pruebas unitarias del front'
       inputs:
@@ -96,10 +116,12 @@ stages:
         failTaskOnFailedTests: true
       condition: always()
 
+    # Compilar el proyecto Angular
     - script: npm run build
       displayName: 'Compilar el proyecto Angular'
       workingDirectory: $(frontPath)
 
+    # Publicar artefactos Angular
     - task: PublishBuildArtifacts@1
       displayName: 'Publicar artefactos Angular'
       inputs:
