--- a/EmployeeCrudApi/EmployeeCrudApi/appsettings.json
+++ b/EmployeeCrudApi/EmployeeCrudApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": 
-    "Server=tcp:jr-sql-server01.database.windows.net,1433;Initial Catalog=JR-sql-db;Persist Security Info=False;User ID=sqladmin;Password=Azure12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connect Timeout=30;"
+    "Server=tcp:jr-sql-server01.database.windows.net,1433;Initial Catalog=ftm-sql-db;Persist Security Info=False;User ID=sqladmin;Password=Adminftm1.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connect Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
